k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upwind-app
  namespace: upwind-app
  labels:
    app: upwind-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: upwind-app
